[tool.poetry]
name = "playground-4-1"
version = "0.1.0"
description = ""
authors = ["Evan Krueger <evank0301@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
pyarrow = "^15.0.0"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
